--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: BlockBuster
-    databaseName: BlockBuster
-    user: BlockBuster
+  - name: blockbuster
+    databaseName: blockbuster
+    user: blockbuster
 
 services:
   - type: web
-    name: BlockBuster
+    name: blockbuster
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: BlockBuster
+          name: blockbuster
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
